# authrex

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROPOSAL.md  README.md  ROADMAP.md  SECURITY.md  _check_ecs.py  _deploy_s3.py  _force_new_taskdef.py  _gen_demo_pdfs.py  _redeploy_backend.py  docker-compose.yml  pitch.md
.kiro/: README.md
backend/: Dockerfile  _deploy_ecs.py  _deploy_frontend.py  _e2e_alb.py  _live_fire_intake.py  _prompt_sanity_check.py  _render_appeal_sample.py  alembic.ini  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_baseline_v0_1_0.py  0002_row_level_security.py
backend/app/: __init__.py  cells.py  config.py  db.py  graceful_shutdown.py  main.py  prompts_versioning.py  quotas.py  rate_limit.py  residency.py  saga.py  streaming.py
backend/app/agents/: ARCHITECTURE.md  README.md  __init__.py  manifest.py
backend/app/agents/appeals_drafter/: README.md  __init__.py  node.py  orchestrator.py  schemas.py
backend/app/agents/clinical_extractor/: README.md  __init__.py  node.py  orchestrator.py  schemas.py
backend/app/agents/decision_composer/: README.md  __init__.py  node.py  orchestrator.py  schemas.py
backend/app/agents/denial_forecaster/: README.md  __init__.py  node.py  orchestrator.py  schemas.py
backend/app/agents/framework/: __init__.py  agent.py  budget.py  cache.py  context.py  grader.py  guardrails.py  models.py  trace_sink.py  types.py
backend/app/agents/intake/: __init__.py  classifier.py  errors.py  runner.py
backend/app/api/: agents_manifest.py  appeals.py  architecture.py  auth.py  auth_oidc.py  authz.py  business_value.py  cases.py  cell_router_middleware.py  compliance.py  compliance_controls.py  demo.py  dlq.py  eval.py  evidence_pack.py  fhir_bulk.py  fhir_pas.py  finops.py  foundry.py  healthz.py  idempotency_middleware.py  intake.py  jobs.py  kiro.py  llm_gateway.py  llm_ping.py  metrics.py  oncology_stack.py  ops.py  policies.py  privacy.py  prompts.py  quotas.py  rate_limit_middleware.py  rate_limits.py  residency.py  responsible_ai.py  sagas.py  security_anomalies.py  stream.py  (+5 more)
backend/app/auth/: __init__.py  dependencies.py  jwt_helpers.py  oidc.py
backend/app/authz/: __init__.py  cedar.py
backend/app/business_value/: __init__.py  provider_abrasion.py  roi.py  star_ratings.py
backend/app/compliance/: __init__.py  cms_0057f.py  control_library.py
backend/app/data/: gold_labels.json  policies.json
backend/app/downstream/: __init__.py  breaker.py
backend/app/events/: __init__.py  dlq.py  outbox.py  publisher.py
backend/app/graph/: __init__.py  build.py  state.py
backend/app/integrations/: __init__.py
backend/app/jobs/: queue.py
backend/app/llm/: __init__.py  anthropic_client.py  base.py  bedrock_client.py  circuit_breaker.py  cross_region_fallback.py  factory.py  gateway.py  openrouter_client.py
backend/app/mcp/: server.py  tools.py
backend/app/models/: __init__.py  appeal.py  clinical.py  communication.py  decision.py  forecast.py  intake.py  necessity.py  policy.py
backend/app/observability/: __init__.py  lineage.py  otel.py  trace.py
backend/app/privacy/: erasure.py  tokenization.py
backend/app/prompts/: _orchestration_doctrine.txt
backend/app/render/: __init__.py  appeal_pdf.py
backend/app/security/: breach_detector.py
backend/app/workers/: case_runner.py
backend/db/: schema.sql
backend/scripts/: _demo_poll.py  _demo_run.py  _demo_verify.py  build_deck.py  generate_gold_labels.py  generate_qr.py  seed_cohort.py  smoke_test.py
backend/tests/: conftest.py  test_intake_runner.py  test_invariants_property.py  test_render_appeal_pdf.py
backend/tests/agents/: test_appeals_drafter.py  test_clinical_extractor.py  test_decision_composer.py  test_denial_forecaster.py  test_necessity_reasoner.py  test_patient_communicator.py  test_policy_retriever.py
backend/tests/api/: test_fhir_pas.py  test_mcp.py
backend/tests/fixtures/: pas_submit_trastuzumab.json  stage3_her2neg_breast.json  stage3_her2pos_breast.json  stage3_her2pos_breast_with_lvef.json
backend/tests/framework/: test_budget.py  test_guardrails.py  test_model_router.py
(+509 files in other folders)
