[project]
name = "authrex-backend"
version = "0.1.0"
description = "Authrex prior-authorisation copilot backend"
requires-python = ">=3.11"

dependencies = [
  # --- Core (smoke test today) ----------------------------------------
  "fastapi==0.115.0",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "asyncpg==0.30.0",
  "sse-starlette==2.1.3",
  "structlog==24.4.0",
  "anthropic==0.39.0",
  "boto3==1.35.50",
  "python-dotenv==1.0.1",
  "httpx==0.27.2",

  # --- Agents + RAG (added May 1+) ------------------------------------
  "langchain==0.3.7",
  "langchain-anthropic==0.2.4",
  "langgraph==0.2.45",
  "fhir.resources==7.1.0",
  "pypdf==5.0.1",
  "pgvector==0.3.6",

  # --- Multi-replica SSE pub/sub (SCALE-7) ----------------------------
  "redis==5.2.0",
]

# Heavy deps deferred to optional. sentence-transformers pulls torch
# (~2 GB). We install only when we actually need pgvector embeddings.
[project.optional-dependencies]
embeddings = [
  "sentence-transformers==3.2.1",
]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.7.1",
  "mypy==1.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = ["E501"]  # ruff formatter handles line length

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
